[gd_scene load_steps=5 format=3 uid="uid://v0h8paj2j0tv"]

[ext_resource type="Script" path="res://Scenes/Menus/StartMenu.gd" id="1_x350e"]
[ext_resource type="Texture2D" uid="uid://djccvwb8gdfmo" path="res://Imports/images/BackToWorkMenu.png" id="2_kt8mt"]
[ext_resource type="Theme" uid="uid://4t5hi1g5167h" path="res://Scenes/Menus/Themes/Button.tres" id="3_juprp"]
[ext_resource type="PackedScene" uid="uid://bo5fi1lwdjhi4" path="res://Scenes/Menus/settings_menu.tscn" id="4_ctx8w"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x350e")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.356863, 0, 0.145098, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kt8mt")
expand_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 1.3

[node name="Start" type="Button" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_juprp")
text = "Start"

[node name="Settings" type="Button" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_juprp")
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_juprp")
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource("4_ctx8w")]
layout_mode = 1

[connection signal="pressed" from="MarginContainer2/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer2/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer2/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
